--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,13 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env
+.env.local
+.env.test
+.env.dev
+.env.development
+.env.prod
+.env.production
 
 # vercel
 .vercel
